src/objects/loan__Periodic_Fee_Setup__c.object
<CustomObject>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Clear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Fee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Periodic Fee Setup</relationshipLabel>
        <relationshipName>Periodic_Fee_Setup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Lending_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lending Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Periodic Fee Setup</relationshipLabel>
        <relationshipName>Periodic_Fee_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Next_Recurring_Fee_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Next Recurring Fee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Periodic Fee Setup</label>
    <nameField>
        <displayFormat>PFSID-{0000000000}</displayFormat>
        <label>Periodic Fee Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Periodic Fee Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>